Change the app name and icons, Replaced the old way with Recycler View, added ClickListener to each item, and created basic details screen

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -26,4 +26,6 @@
     <string name="change_language">تغيير اللغة</string>
     <string name="exit">الخروج</string>
     <string name="cleared">تم الحذف بنجاح</string>
+    <string name="night_details">تفاصيل الليلة</string>
+    <string name="back">العودة</string>
 </resources>
